src/objects/BLN_BadgeTemplate_Styles__c.object
<CustomObject>
    <fields>
        <fullName>BadgeName__c</fullName>
        <label>BadgeName</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Badge_Type__c</fullName>
        <label>Badge Type</label>
        <picklist>
            <picklistValues>
                <fullName>Zebra</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Brother</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>EightthElement__c</fullName>
        <label>EightthElement</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Event__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Event</label>
        <referenceTo>BLN_Event__c</referenceTo>
        <relationshipName>BadgeTemplate_Styles</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FifthElement__c</fullName>
        <label>FifthElement</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>FirstRowElement__c</fullName>
        <description>This is for fisrt row style</description>
        <label>FirstRowElement</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>FourthElement__c</fullName>
        <label>FourthElement</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Mobile_Default_Badge__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Mobile Default Badge</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Module__c</fullName>
        <label>Module</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Onsite_Default_Badge__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Onsite Default Badge</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Registration_Default_Badge__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Registration Default Badge</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SecondElement__c</fullName>
        <label>SecondElement</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SeventhElement__c</fullName>
        <label>SeventhElement</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SixthElement__c</fullName>
        <label>SixthElement</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ThirdElement__c</fullName>
        <label>ThirdElement</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ninthelement__c</fullName>
        <label>ninthelement</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <label>BLN BadgeTemplate_Styles</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Template Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>BLN BadgeTemplate_Styles</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>